Fix: Slice 반환 로직 개선 및 TODO 추가 #87